@@ -1,0 +1,8 @@
+Title: table statehist: code cleanup / minor performance improvements
+Level: 1
+Component: livestatus
+Version: 1.2.3i7
+Date: 1383651560
+Class: fix
+
+
