@@ -8,6 +8,9 @@
     * 0050 : New concept of favorite hosts and services plus matching filters and views...
     * 0043 FIX : LDAP: Improved error reporting during synchronisation...
 
+    Livestatus:
+    * 0023 FIX : table statehist: code cleanup / minor performance improvements...
+
 
 1.2.3i6:
     Core & Setup:
